--- a/jrs2Covid/package.json
+++ b/jrs2Covid/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.11",
     "d3": "^7.0.4",
     "rxjs": "~6.6.0",
+    "topojson": "^3.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
