--- a/jrs2Covid/package.json
+++ b/jrs2Covid/package.json
@@ -22,6 +22,7 @@
     "d3": "^7.0.4",
     "rxjs": "~6.6.0",
     "topojson": "^3.0.2",
+    "topojson-simplify": "^3.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
