--- a/jrs2Covid/package.json
+++ b/jrs2Covid/package.json
@@ -19,8 +19,12 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
-    "d3": "^7.0.4",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "d3": "^7.1.1",
     "rxjs": "~6.6.0",
+    "topojson": "^3.0.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -29,7 +33,7 @@
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
     "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.28",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
